Freedom Sanbox Ant Deploy/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Fixed_Income__c</fullName>
        <label>Fixed Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>From_Portal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>From_Portal</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gold_Growth_Rate__c</fullName>
        <defaultValue>10</defaultValue>
        <description>Added to decide growth rate of new record type GOLD in Investment Asset.</description>
        <label>Gold Growth Rate</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gold__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Gold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HUF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HUF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Opted_For_Renewal__c</fullName>
        <label>Has Opted For Renewal</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Health_History_del__c</fullName>
        <label>Health History</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IFSC_Number2__c</fullName>
        <label>IFSC 2 Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IFSC_Number__c</fullName>
        <label>IFSC Number</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Income_Growth_Rate__c</fullName>
        <label>Income Growth Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Inflation_Rate__c</fullName>
        <label>Inflation Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Investment_Asset_Rollup__c</fullName>
        <label>Investment Asset Rollup</label>
        <summarizedField>Investment_Asset__c.TotalAsset__c</summarizedField>
        <summaryForeignKey>Investment_Asset__c.Entity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>IsCreatedByPartner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This shows whether the user is partner user or not.</description>
        <label>IsCreatedByPartner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCustomerPortal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field should be deleted after sending mails to Portal Accounts of &quot;New Look Member Portal&quot;</description>
        <label>IsCustomerPortal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsExecutionTrackerGenerated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This Flag is used to check whether ET is generated for current entity or not. Once ET is generated don&apos;t allow  user to change the Approved Action plan and Execution Tracker Object.For that disable &quot;Approved&quot; button from Action Plan and &quot;Generate Action Plan&quot; button from Generate Action Plan page.</description>
        <label>IsExecutionTrackerGenerated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsFfreedom_On_Leave__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This for to send sms to clients that Ffreedom team is on leave please contact at there mobile number.</description>
        <label>IsFfreedom On Leave</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSynched__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSynched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsTestTaken__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsTestTaken</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsUnsubscribe__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsUnsubscribe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Biz_Enitity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Biz Enitity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Pathfinder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Pathfinder?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Life_Insurance_Suggested_Cover__c</fullName>
        <label>Life Insurance Suggested Cover</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Logo__c</fullName>
        <description>This field stores logo for each Partner Portals</description>
        <inlineHelpText>Partner Portal Logo</inlineHelpText>
        <label>Logo</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>MICR_Number2__c</fullName>
        <label>MICR 2 Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MICR_Number__c</fullName>
        <label>MICR Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MST2_Old_Value_For_Approval__c</fullName>
        <label>MST2 Old Value For Approval</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MST_Allocated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MST Allocated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MST_Allocated_Date__c</fullName>
        <label>MST Allocated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MST_Old_Value_For_Approval__c</fullName>
        <label>MST Old Value For Approval</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MST_Old_Value__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MST Old Value</label>
        <referenceTo>Team_Member__c</referenceTo>
        <relationshipLabel>Accounts (MST Old Value)</relationshipLabel>
        <relationshipName>MST_Old</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MST_Team_Member__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>MST (Member Success Team)</label>
        <referenceTo>Team_Member__c</referenceTo>
        <relationshipLabel>Accounts (MST)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marriage_Date__c</fullName>
        <description>Date of Marriage</description>
        <label>Marriage Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MemberFinancialPlanPresentationDate__c</fullName>
        <label>Member Financial Plan Presentation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Membership_End_Date__c</fullName>
        <label>Membership End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Membership_Start_Date__c</fullName>
        <label>Membership Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NDC_Payout__c</fullName>
        <label>NDC Payout</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Name_of_Department__c</fullName>
        <label>Name of Department</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nomination__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Nomination</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Not_Renewal_Test__c</fullName>
        <formula>IF( 
                    ISNULL( Cheque_Received_Date_2__c )  ,
                    (
((YEAR( TODAY())*12+MONTH(TODAY()))-
(YEAR( Cheque_Received_Date__c )*12+MONTH(Cheque_Received_Date__c)))

                        
                    ),
                    (
      ((YEAR( TODAY())*12+MONTH(TODAY()))-
(YEAR(Cheque_Received_Date_2__c)*12+MONTH(Cheque_Received_Date_2__c)))
                         
                    )
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Not Renewal Test</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Months__c</fullName>
        <label>Number Of Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OPS_Old_Value__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OPS Old Value</label>
        <referenceTo>Team_Member__c</referenceTo>
        <relationshipLabel>Accounts (OPS Old Value)</relationshipLabel>
        <relationshipName>OPS_Old</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OPS_Team_Member__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>MST2 (Operations Team)</label>
        <referenceTo>Team_Member__c</referenceTo>
        <relationshipLabel>Accounts (OPs (Operation Team))</relationshipLabel>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OPs_Allocated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MST2 Allocated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OPs_Allocated_Date__c</fullName>
        <label>MST2  Allocated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Office_Phone_2__c</fullName>
        <label>Office Phone 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <inlineHelpText>Enter the Income from other sourcs</inlineHelpText>
        <label>Other</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PA_PP__c</fullName>
        <formula>IF( ISNULL( Plan_Approved_Date__c ) , (TODAY() - Plan_Writing_Date__c ),(Plan_Approved_Date__c - Plan_Writing_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Approval Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>POA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>POA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PST_Allocated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PST Allocated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PST_Allocated_Date__c</fullName>
        <label>PST Allocated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PST_Old_Value_For_Approval__c</fullName>
        <label>PST Old Value For Approval</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PST_Old_Value__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PST Old Value</label>
        <referenceTo>Team_Member__c</referenceTo>
        <relationshipLabel>Accounts (PST Old Value)</relationshipLabel>
        <relationshipName>PST_Old</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PST_Team_Member__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>PST (Practice Success Team)</label>
        <referenceTo>Team_Member__c</referenceTo>
        <relationshipLabel>Accounts (PST)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PW_DC__c</fullName>
        <formula>IF( ISNULL( Plan_Writing_Date__c ) , (TODAY() -Data_Collection_Date__c),(Plan_Writing_Date__c - Data_Collection_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Writing Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Email__c</fullName>
        <formula>Virtual_Partner__r.PersonEmail</formula>
        <label>Parent Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Family Members</relationshipLabel>
        <relationshipName>Entities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PartnerFinancialPlanPresentationDate__c</fullName>
        <label>Partner Financial Plan Presentation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Partner_Email__c</fullName>
        <description>It will populate Email Id of Partner (Virtual / Partner)</description>
        <formula>IF(Virtual_Partner__c  &lt;&gt; null,  Virtual_Partner__r.Email_ID__c , Owner.Email )</formula>
        <label>Partner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlanGenerationDateFromSystem__c</fullName>
        <label>Plan Generation Date From System</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_Approved_Date__c</fullName>
        <label>Plan Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_Generation_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Added in FP changes</description>
        <label>Plan Generation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_Lifecycle_Points__c</fullName>
        <formula>IF( (Total_Cycle__c &gt;0 &amp;&amp; Total_Cycle__c&lt;=30), 40,IF(Total_Cycle__c&gt;=31 &amp;&amp;Total_Cycle__c&lt;=45,30,IF(Total_Cycle__c&gt;=46 &amp;&amp; Total_Cycle__c&lt;=60,0,null)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Lifecycle Points</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan_Presentation_Completion_Status__c</fullName>
        <label>Plan Presentation Completion Status</label>
        <picklist>
            <picklistValues>
                <fullName>Rework Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rework Not Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Plan_Presented_Date__c</fullName>
        <label>Plan Presented Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_Writing_Date__c</fullName>
        <label>Plan Writing Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <formula>HYPERLINK(&apos;/apex/FamilyMemberDetail?entityId=&apos;+Id+&apos;&amp;tabname=Financial Planning&apos;,&apos;Plan For &apos;+ LastName ,&apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Id__c</fullName>
        <label>Portal_Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Parent_Entity__c</fullName>
        <label>Portal Parent Entity</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Private_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To decide entities visibility.</description>
        <label>Private Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Real_Estate__c</fullName>
        <label>Real Estate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recommended_Revenue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Recommended Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <formula>RecordTypeId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recreation__c</fullName>
        <label>Recreation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recurring_Fees__c</fullName>
        <label>Recurring Fees (FP+Rebalance)</label>
        <picklist>
            <picklistValues>
                <fullName>20,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referred_By__c</fullName>
        <label>Referred By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_by_CustomLead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referred by Lead</label>
        <referenceTo>Lead_Platform_User__c</referenceTo>
        <relationshipLabel>Accounts (Referred By Leads)</relationshipLabel>
        <relationshipName>Entity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referred_by_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referred by Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Referred by Entity)</relationshipLabel>
        <relationshipName>Entity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referred_by_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referred by Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Accounts (Referred By Leads)</relationshipLabel>
        <relationshipName>Entity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rejected?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_To__c</fullName>
        <description>To select user.</description>
        <label>Related To</label>
        <picklist>
            <picklistValues>
                <fullName>Ffreedom</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Virtual Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <formula>Cheque_Received_Date__c + 365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Due_Date__c</fullName>
        <label>Renewal Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Lapse_Date__c</fullName>
        <label>Renewal Lapse Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_SMS_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renewal SMS Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal_Start_Date__c</fullName>
        <label>Renewal Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Research_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Research Team</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ResearchTeam</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Residential_Status_del__c</fullName>
        <label>Residential Status</label>
        <picklist>
            <picklistValues>
                <fullName>Permanent Resident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resident but not Ordinary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Resident</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Retirement_Age__c</fullName>
        <label>Retirement Age</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retirement_Planning_Entity__c</fullName>
        <label>Retirement Planning Entity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retirement_Year__c</fullName>
        <label>Retirement Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_category__c</fullName>
        <label>Revenue category</label>
        <picklist>
            <picklistValues>
                <fullName>Subscription Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transaction Clip</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_profile__c</fullName>
        <label>Risk profile</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Services_Offered__c</fullName>
        <label>Services Offered</label>
        <picklist>
            <picklistValues>
                <fullName>Comprehensive FP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comprehensive FP+SP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Income Tax Filing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One Goal Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retirement Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Succession Planning 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Succession Planning 2</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stock_Growth_Rate__c</fullName>
        <defaultValue>14</defaultValue>
        <label>Stock Growth Rate</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stop_Escalation_Emails__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stop Escalation Emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Synched_Date_Time__c</fullName>
        <label>Synched Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TDS__c</fullName>
        <label>VAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Testimonial_Received__c</fullName>
        <label>Testimonial Received</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>To_set_Birthdate_Alert__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field is created to mass update the records and trigger the time based workflow</description>
        <label>To set Birthdate Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Received_Test__c</fullName>
        <formula>(Amount_Received__c + Amount_2nd_Installment__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total_Amount_Received_Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Assets__c</fullName>
        <label>Total Assets</label>
        <summarizedField>Asset__c.Monthly_Asset__c</summarizedField>
        <summaryForeignKey>Asset__c.Entity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Booked_Revenue__c</fullName>
        <label>Total Booked Revenue</label>
        <summarizedField>Execution_Tracker__c.Revenue_Booked__c</summarizedField>
        <summaryForeignKey>Execution_Tracker__c.Entity_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Cycle__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Cycle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Flat_Commission__c</fullName>
        <label>Total Flat Commission</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Income__c</fullName>
        <label>Total Income</label>
        <summarizedField>Income__c.Monthly_Income__c</summarizedField>
        <summaryForeignKey>Income__c.Entity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Investment_Assets__c</fullName>
        <label>Total Investment Assets</label>
        <summarizedField>Investment_Asset__c.Total__c</summarizedField>
        <summaryForeignKey>Investment_Asset__c.Entity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Liabilities__c</fullName>
        <label>Total Liabilities</label>
        <summarizedField>Loan__c.Principal_Amount_Outstanding__c</summarizedField>
        <summaryForeignKey>Loan__c.Entity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tribal_Activity_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tribal Activity Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trust__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trust</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type_of_Department__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>PST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FP&amp;A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Virtual_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field is created to select the related virtual partner of that entity.

Practice Owner (Partner): Account Record Type</description>
        <label>Practice Owner (Partner)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Virtual Partner)</relationshipLabel>
        <relationshipName>VirtualPartnerAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WelcomeCallDone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Welcome Call Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Will__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check yes if the Will has been created</description>
        <label>Will</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bank_Account_Number__c</fullName>
        <label>Bank Account Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isFPGenerated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isFPGenerated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isUserAccount__c</fullName>
        <formula>IF (Parent_User__c != null, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isUserAccount</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All_Entities</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>PC_EMAIL</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>PC_PHONE3</columns>
        <columns>PAN_ID__pc</columns>
        <columns>Virtual_Partner__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Entities</label>
    </listViews>
    <listViews>
        <fullName>Business_Entities</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>Related_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Related_To__c</field>
            <operation>equals</operation>
            <value>Business Partner</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.Client</value>
        </filters>
        <label>Business Entities</label>
    </listViews>
    <listViews>
        <fullName>MY_Entities_Active_Clients</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.Client</value>
        </filters>
        <filters>
            <field>Entity_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>MY Entities_Active Clients</label>
        <sharedTo>
            <role>Head_Partner_Development</role>
            <role>MgrFinancialPlanningAMETHYSTMUMBAI</role>
            <role>MgrFinancialPlanningGALAXYDELHI</role>
            <role>MgrFinancialPlanningGALAXYMUMBAI</role>
            <role>MgrFinancialPlanningGALAXYMUMBAI2</role>
            <role>MgrFinancialPlanningGALAXYUJJAIN</role>
            <role>MgrFinancialPlanningMAEGANMUMBAI</role>
            <role>SrExecutiveMemberEngagement</role>
            <role>SrMgrFPAMETHYST</role>
            <role>SrMgrFPGALAXY</role>
            <role>SrMgrFPMAEGAN</role>
            <role>SrMgrKnowledgeHub</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
</CustomObject>